--- a/static/css/spectre.css
+++ b/static/css/spectre.css
@@ -549,9 +549,9 @@ dl dd {
   -moz-appearance: none;
   appearance: none;
   background: #fff;
-  border: .05rem solid #5755d9;
+  border: .05rem solid #000000;
   border-radius: .1rem;
-  color: #5755d9;
+  color: #000000;
   cursor: pointer;
   display: inline-block;
   font-size: .8rem;
@@ -583,8 +583,8 @@ dl dd {
 
 .btn:active,
 .btn.active {
-  background: #4b48d6;
-  border-color: #3634d2;
+  background: #000000;
+  border-color: #000000;
   color: #fff;
   text-decoration: none;
 }
@@ -604,22 +604,22 @@ dl dd {
 }
 
 .btn.btn-primary {
-  background: #5755d9;
-  border-color: #4b48d6;
+  background: #000000;
+  border-color: #000000;
   color: #fff;
 }
 
 .btn.btn-primary:focus,
 .btn.btn-primary:hover {
-  background: #4240d4;
-  border-color: #3634d2;
+  background: #000000;
+  border-color: #000000;
   color: #fff;
 }
 
 .btn.btn-primary:active,
 .btn.btn-primary.active {
-  background: #3a38d2;
-  border-color: #302ecd;
+  background: #000000;
+  border-color: #000000;
   color: #fff;
 }
 
