--- a/static/css/yeo.css
+++ b/static/css/yeo.css
@@ -50,19 +50,19 @@ a:active {
 }
 
 .logo-img {
-    padding-right: 10px;
+    padding-right: 20px;
     display: inline-block;
-    height: 24px;
+    height: 40px;
 }
 
 .yeo-slogan {
-    background: #0a007e center;
+    background: #FFD700 center;
     background-size: auto;
     padding-bottom: 3rem;
 /* Rectangle 10: */
-background-image: -webkit-linear-gradient(44deg, #0C0091 0%, #00A87E 100%);
-background-image: -o-linear-gradient(44deg, #0C0091 0%, #00A87E 100%);
-background-image: linear-gradient(134deg, #0C0091 0%, #00A87E 100%);
+background-image: -webkit-linear-gradient(44deg, #FFD700 0%, #FFA500 100%);
+background-image: -o-linear-gradient(44deg, #FFD700 0%, #FFA500 100%);
+background-image: linear-gradient(134deg, #FFD700 0%, #FFA500 100%);
 }
 
 .yeo-slogan .slogan-bold {
@@ -85,7 +85,7 @@ background-image: linear-gradient(134deg, #0C0091 0%, #00A87E 100%);
 .slogan {
     background: transparent;
     padding-top: 3rem;
-    color: #fff;
+    color: #000000;
     text-align: left;
     max-width: 1280px;
 }
@@ -112,11 +112,11 @@ background-image: linear-gradient(134deg, #0C0091 0%, #00A87E 100%);
 }
 
 .yeo-header a {
-    color: #fff;
+    color: #000000;
 }
 
 .slogan .slogan-bold {
-    color: #00ffd4;
+    color: #000000;
 }
 
 
@@ -124,10 +124,10 @@ background-image: linear-gradient(134deg, #0C0091 0%, #00A87E 100%);
     padding: .9rem 1.5rem;
     height: auto;
     background: transparent;
-    color: #fff;
+    color: #000000;
     font-weight: 400;
     text-transform: uppercase;
-    border-color: rgba(255, 255, 255, .4);
+    border-color: rgba(0, 0, 0, 0);
     letter-spacing: 0.05rem;
 }
 
@@ -149,7 +149,7 @@ background-image: linear-gradient(134deg, #0C0091 0%, #00A87E 100%);
 }
 
 .yeo-header .navbar-section .btn.btn-link {
-    color: #fff;
+    color: #000000;
     padding: .25rem 1.2rem;
     opacity: .9;
 }
