--- a/static/css/yeo.css
+++ b/static/css/yeo.css
@@ -87,16 +87,16 @@ background-image: linear-gradient(134deg, #FFD700 0%, #FFA500 100%);
     padding-top: 3rem;
     color: #000000;
     text-align: left;
-    max-width: 1280px;
+    max-width: 1380px;
 }
 
 .slogan h1 {
     font-size: 3.2rem;
     font-family: 'Poppins', serif;
-    font-weight: 700;
+    font-weight: 900;
     text-shadow: 0px 5px 8px rgba(0, 0, 0, 0.1);
     line-height: 1.3;
-    max-width: 950px;
+    max-width: 1500px;
     margin-bottom: 1rem;
     letter-spacing: 0.05rem;
 }
@@ -127,7 +127,7 @@ background-image: linear-gradient(134deg, #FFD700 0%, #FFA500 100%);
     color: #000000;
     font-weight: 400;
     text-transform: uppercase;
-    border-color: rgba(0, 0, 0, 0);
+    border-color: rgba(0, 0, 0);
     letter-spacing: 0.05rem;
 }
 
@@ -198,7 +198,7 @@ background-image: linear-gradient(134deg, #FFD700 0%, #FFA500 100%);
 
 .yeo-price {
     padding: 0 0 4rem 0;
-    background: #0a007e;
+    background: #FFA500;
 }
 
 .yeo-price .panel {
@@ -311,7 +311,7 @@ background-image: linear-gradient(134deg, #FFD700 0%, #FFA500 100%);
 }
 
 .yeo-do a {
-    color: #382CBE;
+    color: #FFA500;
 }
 
 
@@ -320,13 +320,13 @@ background-image: linear-gradient(134deg, #FFD700 0%, #FFA500 100%);
 
 .yeo-work {
     padding: 4rem 0 1rem 0;
-    background: #0a007e;
-    color: #fff;
+    background: #FFA500;
+    color: #000000;
     background-size: cover;
 }
 
 .yeo-work-feature-bold {
-    color: #00ffd4;
+    color: #000000;
 }
 
 .yeo-work-img img {
@@ -364,19 +364,21 @@ background-image: linear-gradient(134deg, #FFD700 0%, #FFA500 100%);
 
 
 .yeo-footer {
-    background: #0a007e;
-    color: #fff;
+    color: #000000;
     padding: 3rem 0;
+    background-image: -webkit-linear-gradient(44deg, #FFD700 0%, #FFA500 100%);
+    background-image: -o-linear-gradient(44deg, #FFD700 0%, #FFA500 100%);
+    background-image: linear-gradient(134deg, #FFD700 0%, #FFA500 100%);
 }
 
 .yeo-footer h4 {
     font-size: 1rem;
-    color: #fff;
+    color: #000000;
 }
 
 .yeo-footer .nav .nav-item a {
     padding: .3rem 0rem;
-    color: #fff;
+    color: #000000;
     opacity: 0.8;
     font-weight: 200;
 }
